[gd_scene load_steps=3 format=3 uid="uid://3fqdwtr0ackl"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_b3nbr"]
[ext_resource type="Texture2D" uid="uid://7qedbi0lmy1d" path="res://Character Select Screen/TitleScreen.png" id="2_8yhgd"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3nbr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -120.0
offset_right = 2975.0
offset_bottom = 1829.0
texture = ExtResource("2_8yhgd")

[node name="LinkButton" type="LinkButton" parent="."]
layout_mode = 0
offset_left = 101.0
offset_top = 516.0
offset_right = 883.0
offset_bottom = 810.0

[connection signal="pressed" from="LinkButton" to="." method="_on_link_button_pressed"]
