[gd_scene load_steps=4 format=3 uid="uid://3fqdwtr0ackl"]

[ext_resource type="Script" path="res://Menu/start_menu.gd" id="1_uw3vl"]
[ext_resource type="Texture2D" uid="uid://ca4de511quu5p" path="res://Menu/TitleScreen.png" id="2_vk4qr"]
[ext_resource type="AudioStream" uid="uid://bqt5dts6nv11v" path="res://Menu/LobbyMusic.mp3" id="3_vd1p0"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uw3vl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -50.0
offset_top = -44.0
offset_right = 1908.0
offset_bottom = 1113.0
texture = ExtResource("2_vk4qr")

[node name="ExitButton" type="LinkButton" parent="."]
layout_mode = 0
offset_left = 644.0
offset_top = 494.0
offset_right = 1170.0
offset_bottom = 695.0

[node name="ControlsButton" type="LinkButton" parent="."]
layout_mode = 0
offset_left = -48.0
offset_top = 500.0
offset_right = 427.0
offset_bottom = 694.0

[node name="IntroButton" type="LinkButton" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 274.0
offset_right = 606.0
offset_bottom = 443.0

[node name="StoryButton" type="LinkButton" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 750.0
offset_right = 580.0
offset_bottom = 965.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vd1p0")
volume_db = 0.299
autoplay = true

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="IntroButton" to="." method="_on_intro_button_pressed"]
[connection signal="pressed" from="StoryButton" to="." method="_on_story_button_pressed"]
